--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -156,4 +156,9 @@ a {
         font-size: 2rem !important;
         line-height: 2.5rem !important;
     }
+    
+    .v-btn__content {
+        font-size: 1.8rem; /* Adjust the font size as needed */
+        padding-top: 10px;
+    }
 }
